fix scrollbar color

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -664,12 +664,12 @@ footer p {
 }
 
 .team-modal::-webkit-scrollbar {
-  width: 8px;
-  background: #e0e0e0;
+  width: 10px;
+  background: transparent;
   border-radius: 8px;
 }
 .team-modal::-webkit-scrollbar-thumb {
-  background: #2196f3;
+  background: #2195f39f;
   border-radius: 8px;
 }
 
